--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Ký Hội Thao Sinh Viên Duy Tân 2025</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="bg-element bg-element-1"></div>
@@ -158,48 +158,7 @@
                     <div id="photoFileName" class="file-name"></div>
                 </div>
 
-                <div class="form-group">
-                    <label>Đã từng tham gia thi đấu thể thao? <span class="required">*</span></label>
-                    <div class="radio-group">
-                        <label>
-                            <input type="radio" name="previousExperience" value="Có" required onclick="togglePreviousExperience(true)">
-                            <span class="radio-checkmark"></span>
-                            Có
-                        </label>
-                        <label>
-                            <input type="radio" name="previousExperience" value="Không" onclick="togglePreviousExperience(false)">
-                            <span class="radio-checkmark"></span>
-                            Không
-                        </label>
-                    </div>
-                </div>
-
-                <div id="previousExperienceDetails" class="hidden">
-                    <div class="input-group">
-                        <input type="text" id="sportType" name="sportType" placeholder=" ">
-                        <label for="sportType">Môn</label>
-                    </div>
-                    <div class="input-group">
-                        <input type="text" id="competition" name="competition" placeholder=" ">
-                        <label for="competition">Giải</label>
-                    </div>
-                    <div class="form-group">
-                        <label for="year">Năm</label>
-                        <input type="number" id="year" name="year" min="2000" max="2025">
-                    </div>
-                    <div class="input-group">
-                        <input type="text" id="achievement" name="achievement" placeholder=" ">
-                        <label for="achievement">Thành tích</label>
-                    </div>
-                    <div class="form-group">
-                        <label for="achievementPhoto">Upload ảnh thành tích (nếu có)</label>
-                        <label class="custom-file-upload">
-                            <input type="file" id="achievementPhoto" name="achievementPhoto" accept="image/*" onchange="updateFileName(this, 'achievementPhotoFileName')">
-                            <i class="fas fa-cloud-upload-alt"></i> Chọn file ảnh
-                        </label>
-                        <div id="achievementPhotoFileName" class="file-name"></div>
-                    </div>
-                </div>
+              
             </section>
 
             <!-- ĐĂNG KÝ THAM GIA THI ĐẤU -->
@@ -214,7 +173,8 @@
                 <div class="sport-section">
                     <h3><i class="fas fa-futbol"></i> 1. Bóng đá</h3>
                     <div class="sport-options">
-                        <div class="sport-option">
+                        <!--
+                         <div class="sport-option">
                             <label>
                                 <input type="checkbox" id="football-male" name="sports" value="Bóng đá nam" class="sport-checkbox" data-parent="football-male">
                                 Bóng đá nam (Tuyển 10 cầu thủ, 2 HLV)
@@ -236,6 +196,7 @@
                                 </div>
                             </div>
                         </div>
+                        -->
 
                         <div class="sport-option">
                             <label>
@@ -368,7 +329,7 @@
 
                 <!-- 4. Kéo co -->
                 <div class="sport-section">
-                    <h3><i class="fas fa-people-pull"></i> 4. Kéo co (Nam/Nữ chia đội 5–5)</h3>
+                    <h3><i class="fas fa-people-pull"></i> 4. Kéo co 10 người (5 Nam/ 5 Nữ)</h3>
                     <div class="sport-options">
                         <div class="sport-option">
                             <label>
@@ -493,7 +454,7 @@
                         <div class="sport-option">
                             <label>
                                 <input type="checkbox" id="badminton-male" name="sports" value="Cầu lông nam" class="sport-checkbox">
-                                Cầu lông nam
+                                Cầu lông đơn nữ
                             </label>
                         </div>
                         <div class="sport-option">
@@ -519,6 +480,48 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Đã từng tham gia thi đấu thể thao? <span class="required">*</span></label>
+                    <div class="radio-group">
+                        <label>
+                            <input type="radio" name="previousExperience" value="Có" required onclick="togglePreviousExperience(true)">
+                            <span class="radio-checkmark"></span>
+                            Có
+                        </label>
+                        <label>
+                            <input type="radio" name="previousExperience" value="Không" onclick="togglePreviousExperience(false)">
+                            <span class="radio-checkmark"></span>
+                            Không
+                        </label>
+                    </div>
+                </div>
+
+                <div id="previousExperienceDetails" class="hidden">
+                    <div class="input-group">
+                        <input type="text" id="sportType" name="sportType" placeholder=" ">
+                        <label for="sportType">Môn</label>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="competition" name="competition" placeholder=" ">
+                        <label for="competition">Giải</label>
+                    </div>
+                    <div class="form-group">
+                        <label for="year">Năm</label>
+                        <input type="number" id="year" name="year" min="2000" max="2025">
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="achievement" name="achievement" placeholder=" ">
+                        <label for="achievement">Thành tích</label>
+                    </div>
+                    <div class="form-group">
+                        <label for="achievementPhoto">Upload ảnh thành tích (nếu có)</label>
+                        <label class="custom-file-upload">
+                            <input type="file" id="achievementPhoto" name="achievementPhoto" accept="image/*" onchange="updateFileName(this, 'achievementPhotoFileName')">
+                            <i class="fas fa-cloud-upload-alt"></i> Chọn file ảnh
+                        </label>
+                        <div id="achievementPhotoFileName" class="file-name"></div>
                     </div>
                 </div>
             </section>
@@ -564,7 +567,11 @@
             </div>
         </div>
     </div>
-
+<footer class="footer">
+  <div class="footer-content">
+    <p>Designed & Developed by <a href="https://truongdat.glitch.me/" target="_blank" rel="noopener noreferrer">truongdat</a></p>
+  </div>
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
